# -*- cmake -*- -----------------------------------------------------------
# @@COPYRIGHT@@
#*-------------------------------------------------------------------------
# @file
# @brief

ADD_EXECUTABLE(simple simple.cpp)

# --------------------------------------------------------------------------
# vim:ft=cmake
